Support alternate artifacts built with Java 15